unpackaged/main/default/objects/User/fields/Assign_Logistics_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Assign_Logistics_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Logistics Campaign</label>
    <type>Checkbox</type>
</CustomField>