unpackaged/main/default/objects/User/fields/Client_VP__c.field-meta.xml
<CustomField>
    <fullName>Client_VP__c</fullName>
    <label>Client VP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>