unpackaged/main/default/objects/User/fields/Corporate_Accounts_Selling_Team__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Accounts_Selling_Team__c</fullName>
    <label>Corporate Accounts Selling Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Campanaro</fullName>
            </value>
            <value>
                <fullName>Jeewek</fullName>
            </value>
            <value>
                <fullName>Newman</fullName>
            </value>
            <value>
                <fullName>Thomas</fullName>
            </value>
            <value>
                <fullName>Rosenow</fullName>
            </value>
            <value>
                <fullName>Porter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>