unpackaged/main/default/objects/User/fields/Date_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Date_Inactive__c</fullName>
    <description>Date the persons record was made inactive</description>
    <inlineHelpText>Automatically set value for when the record was made inactive</inlineHelpText>
    <label>Date Inactive</label>
    <type>Date</type>
</CustomField>