unpackaged/main/default/objects/User/fields/Eligible_for_Incentives__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Incentives__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked if the employee is eligible for incentives. By default the box is unchecked.</description>
    <label>Eligible for Incentives</label>
    <type>Checkbox</type>
</CustomField>