unpackaged/main/default/objects/User/fields/GC_Is_Allowed_Requestor__c.field-meta.xml
<CustomField>
    <fullName>GC_Is_Allowed_Requestor__c</fullName>
    <formula>OR(
 INCLUDES(GC_Show_Role__c, &#39;GC Account Manager&#39;),
 INCLUDES(GC_Show_Role__c, &#39;GC Creative Director&#39;),
 INCLUDES(GC_Show_Role__c, &#39;GC Traffic Administrator&#39;),
 INCLUDES(GC_Show_Role__c, &#39;GC Director of Account Management&#39;),
 INCLUDES(GC_Show_Role__c, &#39;GC Sales Manager&#39;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Allowed Requestor</label>
    <type>Checkbox</type>
</CustomField>