unpackaged/main/default/objects/User/fields/GC_Show_Role__c.field-meta.xml
<CustomField>
    <fullName>GC_Show_Role__c</fullName>
    <label>GES Connect Show Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GC Account Manager</fullName>
            </value>
            <value>
                <fullName>GC Creative Director</fullName>
            </value>
            <value>
                <fullName>GC Traffic Administrator</fullName>
            </value>
            <value>
                <fullName>GC Detailer</fullName>
            </value>
            <value>
                <fullName>GC Director of Account Management</fullName>
            </value>
            <value>
                <fullName>GC Sales Manager</fullName>
            </value>
            <value>
                <fullName>GC Graphics Project Manager</fullName>
            </value>
            <value>
                <fullName>GC Community Client</fullName>
            </value>
            <value>
                <fullName>GC Community Vendor</fullName>
            </value>
            <value>
                <fullName>GC Drafter</fullName>
            </value>
            <value>
                <fullName>GC Convention Planning Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>