unpackaged/main/default/objects/User/fields/national_dmu__c.field-meta.xml
<CustomField>
    <fullName>national_dmu__c</fullName>
    <label>National DMU</label>
    <relationshipName>R00N40000001pvEVEAY</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>