unpackaged/main/default/objects/User/fields/Oracle_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Employee_Number__c</fullName>
    <description>Identifier used in Oracle</description>
    <externalId>true</externalId>
    <label>Oracle Employee Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>