unpackaged/main/default/objects/User/fields/Profile_Check__c.field-meta.xml
<CustomField>
    <fullName>Profile_Check__c</fullName>
    <label>Profile Check</label>
    <length>10</length>
    <type>Text</type>
</CustomField>