unpackaged/main/default/objects/User/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADRP BOOTH</fullName>
            </value>
            <value>
                <fullName>Audio Visual</fullName>
            </value>
            <value>
                <fullName>Audio/Visual</fullName>
            </value>
            <value>
                <fullName>BULLETIN BOARD</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Entrance Unit</fullName>
            </value>
            <value>
                <fullName>Exhibit Booths</fullName>
            </value>
            <value>
                <fullName>EXHIBITOR BOOTH PACKAGE</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>GES</fullName>
            </value>
            <value>
                <fullName>GES Service Desk</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Lead Retrieval</fullName>
            </value>
            <value>
                <fullName>Mannequins</fullName>
            </value>
            <value>
                <fullName>MISC</fullName>
            </value>
            <value>
                <fullName>Modeling &amp; Talent</fullName>
            </value>
            <value>
                <fullName>Office Equipment</fullName>
            </value>
            <value>
                <fullName>Plant &amp; Floral</fullName>
            </value>
            <value>
                <fullName>Plant and Floral</fullName>
            </value>
            <value>
                <fullName>Plant-Floral</fullName>
            </value>
            <value>
                <fullName>Poster Boards</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>SIGNS AND BANNERS</fullName>
            </value>
            <value>
                <fullName>Staff Pro Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>