unpackaged/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Exhibition Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Client Services</fullName>
            </value>
            <value>
                <fullName>Crawford</fullName>
            </value>
            <value>
                <fullName>Grouzard</fullName>
            </value>
            <value>
                <fullName>Loveless</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Ryley</fullName>
            </value>
            <value>
                <fullName>Infurnari</fullName>
            </value>
            <value>
                <fullName>Smith</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Ann Olson</fullName>
                <label>Olson</label>
            </value>
            <value>
                <fullName>National</fullName>
                <isActive>false</isActive>
                <label>National</label>
            </value>
            <value>
                <fullName>Regional East</fullName>
                <isActive>false</isActive>
                <label>Regional East</label>
            </value>
            <value>
                <fullName>Regional West</fullName>
                <isActive>false</isActive>
                <label>Regional West</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>