unpackaged/main/default/objects/User/fields/Update_Locked_Account_Fields__c.field-meta.xml
<CustomField>
    <fullName>Update_Locked_Account_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this flag to override account validation rules. Used for EE Lead Gen team</description>
    <label>Update Locked Account Fields</label>
    <type>Checkbox</type>
</CustomField>