unpackaged/main/default/objects/User/fields/User_License_Type__c.field-meta.xml
<CustomField>
    <fullName>User_License_Type__c</fullName>
    <formula>Profile.UserLicense.Name</formula>
    <label>User License Type</label>
    <type>Text</type>
</CustomField>