unpackaged/main/default/objects/User/fields/UserLocation__c.field-meta.xml
<CustomField>
    <fullName>UserLocation__c</fullName>
    <description>This is the User&#39;s physical location</description>
    <label>User Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>110- Las Vegas</fullName>
                <color>#0B6FCE</color>
                <label>110- Las Vegas</label>
            </value>
            <value>
                <fullName>120- Housing</fullName>
                <label>120- OnPeak</label>
            </value>
            <value>
                <fullName>140- Salt Lake City</fullName>
                <color>#78C953</color>
                <label>140- Salt Lake City</label>
            </value>
            <value>
                <fullName>150- Reno</fullName>
                <color>#E27001</color>
                <label>150- Reno</label>
            </value>
            <value>
                <fullName>160- Denver</fullName>
            </value>
            <value>
                <fullName>170- Phoenix, Tucson, Albquerque</fullName>
                <color>#A845DC</color>
                <label>170- Phoenix, Tucson, Albquerque</label>
            </value>
            <value>
                <fullName>220- Los Angeles</fullName>
                <color>#F3D904</color>
                <label>220- Los Angeles</label>
            </value>
            <value>
                <fullName>230- Corp Events</fullName>
            </value>
            <value>
                <fullName>240- San Francisco, San Jose</fullName>
                <color>#A53711</color>
                <label>240- San Francisco, San Jose</label>
            </value>
            <value>
                <fullName>250- San Diego</fullName>
                <color>#66E9BD</color>
                <label>250- San Diego</label>
            </value>
            <value>
                <fullName>290 - Audio Visual</fullName>
                <color>#0B24BE</color>
                <label>290 - Audio Visual</label>
            </value>
            <value>
                <fullName>310 - Lead Gen</fullName>
                <color>#419249</color>
                <label>310 - Lead Gen</label>
            </value>
            <value>
                <fullName>320 - Program</fullName>
                <color>#B6E32E</color>
                <label>320 - Program</label>
            </value>
            <value>
                <fullName>330 - GES INT, DPM</fullName>
                <color>#641CCF</color>
                <label>330 - GES INT, DPM</label>
            </value>
            <value>
                <fullName>340 - GES UK, BD</fullName>
                <color>#F96FB7</color>
                <label>340 - GES UK, BD</label>
            </value>
            <value>
                <fullName>350 - GES Europe, BD</fullName>
                <color>#2F5D85</color>
                <label>350 - GES Europe, BD</label>
            </value>
            <value>
                <fullName>360 - GES Middle East, BD</fullName>
                <color>#AFCADF</color>
                <label>360 - GES Middle East, BD</label>
            </value>
            <value>
                <fullName>370 - Retail INT, BD</fullName>
                <color>#8F6429</color>
                <label>370 - Retail INT, BD</label>
            </value>
            <value>
                <fullName>380 - Show Team</fullName>
                <color>#EFAE73</color>
                <label>380 - Show Team</label>
            </value>
            <value>
                <fullName>390 - Branded Entertainment</fullName>
                <color>#57F17C</color>
                <label>390 - Branded Entertainment</label>
            </value>
            <value>
                <fullName>420- Austin, Dallas, Houston, San Antonio</fullName>
                <color>#0B6FCE</color>
                <label>420- Austin, Dallas, Houston, San Antonio</label>
            </value>
            <value>
                <fullName>460- Calgary, Canada</fullName>
                <color>#78C953</color>
                <label>460- Calgary, Canada</label>
            </value>
            <value>
                <fullName>470- Edmonton, Canada</fullName>
                <color>#E27001</color>
                <label>470- Edmonton, Canada</label>
            </value>
            <value>
                <fullName>471 - Vancouver, Canada</fullName>
            </value>
            <value>
                <fullName>480 - Montreal, Canada</fullName>
                <color>#A845DC</color>
                <label>480 - Montreal, Canada</label>
            </value>
            <value>
                <fullName>480 - Montreal, Canada - ESS</fullName>
            </value>
            <value>
                <fullName>481 - Quebec City, Canada</fullName>
            </value>
            <value>
                <fullName>483 - Montreal, Canada - CCI</fullName>
            </value>
            <value>
                <fullName>510- Atlanta</fullName>
                <color>#F3D904</color>
                <label>510- Atlanta</label>
            </value>
            <value>
                <fullName>520- Miami, Orlando, Tampa</fullName>
                <color>#A53711</color>
                <label>520- Miami, Orlando, Tampa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>