unpackaged/main/default/objects/User/listViews/All_Users.listView-meta.xml
<ListView>
    <fullName>All_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>UserLocation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Budget__c</field>
        <operation>equals</operation>
        <value>Branded Experiences</value>
    </filters>
    <label>All Users</label>
</ListView>