unpackaged/main/default/objects/User/listViews/Digital_Products_IT_Admin.listView-meta.xml
<ListView>
    <fullName>Digital_Products_IT_Admin</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>digital products</value>
    </filters>
    <label>Digital Products/IT Admin</label>
    <language>en_US</language>
</ListView>