unpackaged/main/default/objects/User/listViews/GC_Community_Vendor.listView-meta.xml
<ListView>
    <fullName>GC_Community_Vendor</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>GC Community Vendor</value>
    </filters>
    <label>GC Community Vendor</label>
    <language>en_US</language>
</ListView>