unpackaged/main/default/objects/User/listViews/GC_Director_of_Account_Management.listView-meta.xml
<ListView>
    <fullName>GC_Director_of_Account_Management</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>GC_Show_Role__c</columns>
    <columns>GC_Is_Allowed_Requestor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>GC Director of Account Management</value>
    </filters>
    <label>GC Director of Account Management</label>
    <language>en_US</language>
</ListView>