unpackaged/main/default/objects/User/listViews/UATTestUsers.listView-meta.xml
<ListView>
    <fullName>UATTestUsers</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>DB_Approver__c</columns>
    <columns>national_dmu__c</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Test</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Force</value>
    </filters>
    <label>UAT Test Users</label>
</ListView>